// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletFee.vue [With "0" Value]: should be rendered correctly 1`] = `
<div
  class="info-line-container"
>
  <info-line-stub
    assetsymbol="XOR"
    class="wallet-fee"
    fiatvalue="0"
    isformatted="true"
    label="Network Fee"
    labeltooltip="Network fee is used to ensure SORA system's growth and stable performance."
    value="0"
    valuetooltip=""
  />
</div>
`;

exports[`WalletFee.vue [With "Infinity" Value]: should be rendered correctly 1`] = `
<div
  class="info-line-container"
>
  <info-line-stub
    assetsymbol="XOR"
    class="wallet-fee"
    fiatvalue="Infinity"
    isformatted="true"
    label="Network Fee"
    labeltooltip="Network fee is used to ensure SORA system's growth and stable performance."
    value="Infinity"
    valuetooltip=""
  />
</div>
`;

exports[`WalletFee.vue [With "NaN" Value]: should be rendered correctly 1`] = `
<div
  class="info-line-container"
>
  <info-line-stub
    assetsymbol="XOR"
    class="wallet-fee"
    fiatvalue="NaN"
    isformatted="true"
    label="Network Fee"
    labeltooltip="Network fee is used to ensure SORA system's growth and stable performance."
    value="NaN"
    valuetooltip=""
  />
</div>
`;

exports[`WalletFee.vue [With Value]: should be rendered correctly 1`] = `
<div
  class="info-line-container"
>
  <info-line-stub
    assetsymbol="XOR"
    class="wallet-fee"
    fiatvalue="1,518,518.5048512"
    isformatted="true"
    label="Network Fee"
    labeltooltip="Network fee is used to ensure SORA system's growth and stable performance."
    value="1,234,567.890123"
    valuetooltip=""
  />
</div>
`;
